objects/Solution_Design__c.object
<CustomObject>
    <fields>
        <fullName>ACD_Users__c</fullName>
        <label>ACD Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solution Designs</relationshipLabel>
        <relationshipName>Solution_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Team_Members__c</fullName>
        <inlineHelpText>Are there other people or departments which you believe could help win this business?</inlineHelpText>
        <label>Additional Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_advanced_reporting_needs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any advanced reporting needs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_known_Product_Feature_Gaps_Collabora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any known Product Feature Gaps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_known_product_feature_gaps2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any known product feature gaps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_known_product_feature_gaps_engage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any known product feature gaps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Architecture_Diagram_URL__c</fullName>
        <description>This field is used to store the URL path to view the Architecture Diagram. It is necessary to populate this field with the url so that the Solution Design Description document can include the diagram image.</description>
        <inlineHelpText>This field is used to store the URL path to view the Architecture Diagram.</inlineHelpText>
        <label>Architecture Diagram URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Are_they_going_to_use_SSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are they going to use SSO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audio_Attendant__c</fullName>
        <label>Audio Attendant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TTS Prompts</fullName>
                </value>
                <value>
                    <fullName>DTMF Menus</fullName>
                </value>
                <value>
                    <fullName>Schedules</fullName>
                </value>
                <value>
                    <fullName>Dial by Name **Future**</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audio_Conferencing__c</fullName>
        <label>Audio Conferencing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD-HOC</fullName>
                </value>
                <value>
                    <fullName>Station Auto-Conferencing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Being_Reviewed_By__c</fullName>
        <description>SE Champion who is reviewing the SDO</description>
        <label>Being Reviewed By</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Baron, Claire</fullName>
                </value>
                <value>
                    <fullName>Bova, Tom</fullName>
                </value>
                <value>
                    <fullName>Chandra, Abi</fullName>
                </value>
                <value>
                    <fullName>Daniel, Jim</fullName>
                </value>
                <value>
                    <fullName>Herrington, Brad</fullName>
                </value>
                <value>
                    <fullName>Jutras, Patrick</fullName>
                </value>
                <value>
                    <fullName>Landers, Chris</fullName>
                </value>
                <value>
                    <fullName>Nichols, Jack</fullName>
                </value>
                <value>
                    <fullName>Orozco, Bruno</fullName>
                </value>
                <value>
                    <fullName>Ready, David</fullName>
                </value>
                <value>
                    <fullName>Thompson, Eric</fullName>
                </value>
                <value>
                    <fullName>Weida, Liz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Champion__c</fullName>
        <label>**Business Champion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Integrations__c</fullName>
        <label>**CRM/Data/WFM Integrations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Zendesk</fullName>
                </value>
                <value>
                    <fullName>MSCRM</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>RightNow</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <description>Documenting the customer environment to facilitate PureConnect Cloud implementation</description>
        <label>CRM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CIC4SF w/o email2case</fullName>
                </value>
                <value>
                    <fullName>CIC4SF with email2case</fullName>
                </value>
                <value>
                    <fullName>MS Dynamics</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oracle Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Oracle Siebel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>ZenDesk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaaS_Region__c</fullName>
        <label>PureConnect Cloud Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>N / A</fullName>
                    <default>true</default>
                    <label>N / A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Recording_Storage__c</fullName>
        <label>**Call Recording Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Local Customer Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chain_of_Command__c</fullName>
        <inlineHelpText>Do we know the decision makers? Do we know who influences them and who reports to them?
Names / Titles / Areas of Influence</inlineHelpText>
        <label>Chain of Command</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collaborate_Solution_Description__c</fullName>
        <label>Collaborate Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communicate_Solution_Description__c</fullName>
        <label>Communicate Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <description>The compelling event defines “why” the owner MUST act.</description>
        <inlineHelpText>A compelling event can be defined as having an economic owner, a defined date and is a direct response to a business pressure. The action is expected to deliver a business result (improving opportunity, capability or reducing pain).</inlineHelpText>
        <label>Compelling Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competition_Notes__c</fullName>
        <label>Competition Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <inlineHelpText>Do we know who we’re up against – pro’s and con’s in the customer’s mind for each of them. Are we their due diligence, or are they?
Landmines to lay for them?</inlineHelpText>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8x8</fullName>
                </value>
                <value>
                    <fullName>Altigen</fullName>
                </value>
                <value>
                    <fullName>Altitude</fullName>
                </value>
                <value>
                    <fullName>Aspect</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Bell</fullName>
                </value>
                <value>
                    <fullName>CallCopy</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Connect First</fullName>
                </value>
                <value>
                    <fullName>Echopass</fullName>
                </value>
                <value>
                    <fullName>Enghouse</fullName>
                </value>
                <value>
                    <fullName>Five9&apos;s</fullName>
                </value>
                <value>
                    <fullName>Fonality</fullName>
                </value>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>inContact</fullName>
                </value>
                <value>
                    <fullName>InHouse</fullName>
                </value>
                <value>
                    <fullName>LiveOps</fullName>
                </value>
                <value>
                    <fullName>Mitel</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>NewVoiceMedia</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>Noble Systems</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Nortel</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Presence Technology</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Shoretel</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>TellMe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concurrent_Active_Calls__c</fullName>
        <label>Concurrent Active Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connectors__c</fullName>
        <label>Connectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Directory</fullName>
                </value>
                <value>
                    <fullName>SQL Database</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>CSV File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Center_Admin__c</fullName>
        <label>**Contact Center Admin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Environment__c</fullName>
        <inlineHelpText>Existing technology environment, PBX and Call Center technology</inlineHelpText>
        <label>Current Environment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Telephony_Provider__c</fullName>
        <label>Current Telephony Provider?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Technical_Resource_s__c</fullName>
        <label>**IT Infrastructure Admin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customers_s_Goal__c</fullName>
        <inlineHelpText>There are 3 goal types:
Company driven – e.g. increase revenue, reduce cost, etc
Government driven – e.g. Must comply with X regulation
Market driven – e.g. the move to the cloud</inlineHelpText>
        <label>Customers&apos;s Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Data_Access__c</fullName>
        <description>Documenting the customer environment to facilitate PureConnect Cloud implementation</description>
        <label>DB Data Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Customer will host DB</fullName>
                </value>
                <value>
                    <fullName>Nightly DB export to FTPS</fullName>
                </value>
                <value>
                    <fullName>Read-Only DB (hourly log shipping)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTMF_Capture__c</fullName>
        <label>DTMF Capture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Stage__c</fullName>
        <formula>text(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal_Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Model__c</fullName>
        <label>Deployment Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Remote Control VoIP</fullName>
                </value>
                <value>
                    <fullName>Remote Control IO</fullName>
                </value>
                <value>
                    <fullName>Remote Control IO w/RVA</fullName>
                </value>
                <value>
                    <fullName>Remote Control IO w/MPLS</fullName>
                </value>
                <value>
                    <fullName>Local Control VoIP</fullName>
                </value>
                <value>
                    <fullName>Local Control VoIP w/ RVA</fullName>
                </value>
                <value>
                    <fullName>Remote Control VoIP w / RVA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Survey_Notes__c</fullName>
        <label>Deployment Survey Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Assumptions_Collaborate__c</fullName>
        <label>Design Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Assumptions_Communicate__c</fullName>
        <label>Design Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Assumptions_Engage__c</fullName>
        <label>Design Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Assumptions__c</fullName>
        <description>This field is an area where a list of design assumptions can be captured within the record-set.</description>
        <label>Design Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Review_Due_Date__c</fullName>
        <label>Design Review Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dev_Server__c</fullName>
        <description>Documenting the customer environment to facilitate PureConnect Cloud implementation</description>
        <label>Dev Server</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Use production ancillary (MS/RCS)</fullName>
                </value>
                <value>
                    <fullName>Have dedicated ancillary (MS/RCS) [+$]</fullName>
                </value>
                <value>
                    <fullName>Marquee [+$]</fullName>
                </value>
                <value>
                    <fullName>CRM Integration [+$]</fullName>
                </value>
                <value>
                    <fullName>WFM Integration [+$]</fullName>
                </value>
                <value>
                    <fullName>Custom PS middleware/server [+$]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagram_Snapshot__c</fullName>
        <label>Diagram Snapshot</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dialer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dialer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery__c</fullName>
        <inlineHelpText>What capabilities have they said they are looking for? What solution will best meet their needs and does it match with what they&apos;ve said? Why?</inlineHelpText>
        <label>Discovery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_users_have_DID_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do users have DID&apos;s?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Library__c</fullName>
        <defaultValue>&apos;http://i3portal.inin.com/sales/PreSales/Customer%20Designs/Forms/AllItems.aspx&apos;</defaultValue>
        <description>This link is to the document library where the design documents are being managed.</description>
        <label>Document Library</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Emergency_Dialing__c</fullName>
        <label>Emergency Dialing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 via analog gateway</fullName>
                </value>
                <value>
                    <fullName>Basic E911 Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endpoints__c</fullName>
        <label>Endpoints</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Polycom</fullName>
                </value>
                <value>
                    <fullName>Interactive SIP Station 2</fullName>
                </value>
                <value>
                    <fullName>Interactive Windows Softphone</fullName>
                </value>
                <value>
                    <fullName>3rd Party SIP Phones</fullName>
                </value>
                <value>
                    <fullName>PureCloud Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engage_Solution_Description__c</fullName>
        <label>**Engage Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engage_Sub_Services_Needed__c</fullName>
        <label>**Engage Sub-Services Needed?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>ACD</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Data/CRM/WFM Integrations</fullName>
                </value>
                <value>
                    <fullName>Speech Analytics</fullName>
                </value>
                <value>
                    <fullName>Outbound Campaigns</fullName>
                </value>
                <value>
                    <fullName>Satisfactions Survey</fullName>
                </value>
                <value>
                    <fullName>Graphical Scripting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Enterprise_PBX_Solution_Detail__c</fullName>
        <label>Existing Enterprise PBX Solution Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Features_not_GA_the_customer_wanted__c</fullName>
        <label>If yes, list known product feature gaps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Features_not_GA_the_customer_wanteds__c</fullName>
        <label>List any known product feature gaps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_are_interactions_distributed__c</fullName>
        <label>How are interactions distributed?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queues</fullName>
                </value>
                <value>
                    <fullName>Skills</fullName>
                </value>
                <value>
                    <fullName>Routing Logic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_DNIS_entry_points__c</fullName>
        <label>How many DNIS &amp; entry points?</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_Team_Group_roles__c</fullName>
        <label>How many Team/Group roles?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_agents_Teams_Groups__c</fullName>
        <label>How many agents Teams/Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_unique_call_flows__c</fullName>
        <label>**How many unique call flows?</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Yes_list_known_product_feature_gaps1__c</fullName>
        <label>If Yes, list known product feature gaps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Egress__c</fullName>
        <description>Documenting the customer environment to facilitate PureConnect Cloud implementation</description>
        <label>Internet Egress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Genesys (HTTPS only w/ Public CA)</fullName>
                </value>
                <value>
                    <fullName>Customer MPLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacySolutionDesignId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy SolutionDesign Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_any_advanced_reporting_needs__c</fullName>
        <label>List any advanced reporting needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multichannel_Routing__c</fullName>
        <label>Multichannel Routing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voice &amp; Web Chat</fullName>
                </value>
                <value>
                    <fullName>Callbacks (IVR Only)</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Priortiy, FIFO</fullName>
                </value>
                <value>
                    <fullName>Skills-Based Routing with Skill Ratings</fullName>
                </value>
                <value>
                    <fullName>Wrap-Up Codes</fullName>
                </value>
                <value>
                    <fullName>In-Queue Audio Configuration</fullName>
                </value>
                <value>
                    <fullName>In-Queue Flows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_MPLS_Service__c</fullName>
        <label>Network / MPLS Service</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Cloud - Customer Provided MPLS</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud – ININ Provided Internet Only</fullName>
                    <label>PureConnect Cloud – Genesy sProvided Internet Only</label>
                </value>
                <value>
                    <fullName>PureConnect Cloud - ININ Provided MPLS w/ RVA</fullName>
                    <label>PureConnect Cloud - Genesys Provided MPLS w/ RVA</label>
                </value>
                <value>
                    <fullName>PureConnect Cloud - ININ Provide MPLS</fullName>
                    <label>PureConnect Cloud - Genesys Provide MPLS</label>
                </value>
                <value>
                    <fullName>Customer Managed VPN</fullName>
                </value>
                <value>
                    <fullName>Premise - Customer MPLS/WAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_steps__c</fullName>
        <inlineHelpText>Already defined with customer?
Identified but not yet communicated?</inlineHelpText>
        <label>Next steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Solution Designs</relationshipLabel>
        <relationshipName>Solution_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBX_Users__c</fullName>
        <label>PBX Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCI_Environment__c</fullName>
        <inlineHelpText>This is specifically for CaaS opportunity where the customer is requiring the service to be in our PCI Cloud.</inlineHelpText>
        <label>PCI Environment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CaaS_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PCI Premise Required</fullName>
                </value>
                <value>
                    <fullName>Not PCI (No PCI data will be handled by this solution)  </fullName>
                </value>
                <value>
                    <fullName>PCI, collecting CC data via IVR/DTMF (Secure Input) </fullName>
                </value>
                <value>
                    <fullName>PCI, collecting CC data via agent voice (Secure Pause) </fullName>
                </value>
                <value>
                    <fullName>PCI, collecting CC data via IVR/DTMF and agent voice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <inlineHelpText>Are they losing money? Are there stability issues? Why did they give you time to talk to them and what are they trying to fix? This may not be what they defined in the compelling event..</inlineHelpText>
        <label>Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Over_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Over Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this your primary design that is being proposed and match the primary Quote. If so this field should remain checked. If its a optional design the customer requested, uncheck this field.</inlineHelpText>
        <label>Primary Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <description>This is the problem which the SE need help with.</description>
        <label>Problem Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Statements__c</fullName>
        <label>Problem Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>